# family-sous-chef

./: README.md  docker-compose.yml  pyproject.toml
db/: schema.py
raw_recipes/how_to_cook_everything/: one_pot_pasta_with_butter_and_parmesan.cook
src/family_sous_chef/: console.py  recipe_db.py
tests/: test_console.py
