[tool.poetry]
name = "family-sous-chef"
version = "0.1.0"
description = "Family Cookbook Organizer"
license = "GNUv3"
readme = "README.md"
homepage = ""
repository = "https://github.com/alex-evans/family-sous-chef"
authors = ["Alex Evans <alex.evans.d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sous-chef =  "family_sous_chef.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["family_sous_chef"]

[tool.coverage.report]
show_missing = true